# TSBench-Forge

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  _build_notebook.py  baselines.py  daily_feeds.py  demo.py  evaluate.py  example.ipynb  forge_loop.py  generate.py  independent_eval.py  independent_validation.py  ingest.py  leakage_audit.py  program.md  pyproject.toml  score.py
.claude/hooks/: session-start.sh
.github/workflows/: autosearch.yml  notify-rd.yml  scrape-data.yml
docs/: PRODUCTION_GRADE_ROADMAP.md  REWARD_HACKING.md  blog-live-benchmark.md  index.html
docs/figures/: README.md
dsr_eval/: README.md  __init__.py  datasets.py  metrics.py  report.py  runner.py
experiments/: README.md  build_independent_validation_notebook.py  build_live_feeds_notebook.py  independent_validation.ipynb  live_feeds.ipynb
notebooks/: benchmark_pca_comparison.ipynb  example.ipynb  tsfm_significance.ipynb  tsfm_significance_result.md  zero_shot_tsfm_leaderboard.ipynb
scripts/: make_logo.py  merge_tsfm_results.py  plot_leaderboard.py  plot_series_gallery.py  publish_data_bucket.sh  run_tsfm_comparison_lium.py
src/: _build_notebook.py  baselines.py  challenges.py  config.py  daily_feeds.py  demo.py  domains.py  dsr_metrics.py  evaluate.py  feeds.py  forge_llm.py  generate.py  independent_eval.py  independent_validation.py  ingest.py  live_demo.py  live_feeds.py  live_forge_demo.py  model_comparison.py  pool_sampler.py  program.md  sandbox.py  score.py  scraped_source.py  seed.py  static_analysis.py  tsfm_adapters.py  tsfm_comparison.py
src/dsr_eval/: README.md  __main__.py  metrics.py  systems.py
src/source_discovery/: README.md  __init__.py  __main__.py  config.py  coverage.py  ledger.py  llm.py  quality.py  runner.py  system_prompt.md  vet.py
src/sources/: DGP_TAXONOMY.md  README.md  build_report.py  build_single_report.py  candidates.md  coverage_matrix.md  cron.yaml  scraper.py  sources-slow.yaml  sources.yaml  sync_storage.py  verification_log.md
src/sources/discovery/: 2026-07-04-autoresearch.md  2026-07-04-candidates.json  2026-07-05-autoresearch-100.md  2026-07-05-candidates-100rounds.json  2026-07-06-sweep2-vetting.md  2026-07-10-autoresearch-100.md  2026-07-10-candidates-100rounds.json  proposal_ledger.json
src/sources/discovery/proposals/: candidates.json  gap_analysis.md
src/sources/samples/: aemo_market_notices.txt  aemo_nem_5min.csv  amprion_pv_infeed.csv  apnic_labs_ipv6_adoption.json  atlassian_status_incidents.json  avo_alaska_volcano_alerts.json  aws_health_rss.xml  bart_polled_series.json  bart_realtime_etd.json  bgs_uk_earthquakes.xml  binance_btcusdt_15m.json  binance_btcusdt_1m.json  binance_btcusdt_30m.json  binance_funding_rate.json  bitcoin_block_arrivals.json  bitfinex_btcusd_30m_candles.json  bpa_balancing.txt  ca_chhs_facility_outbreaks.json  caiso_grid_conditions.csv  celestrak_satellite_tle.json  chicago_food_inspections.json  citibike_polled_series.json  citibike_station_status.json  coinbase_btc_5min.json  coinbase_intx_btc_funding.json  coinbase_spot_15m.json  coinbase_spot_1m.json  coingecko_btc_hourly.json  crates_io_downloads.json  crw_virtual_station.txt  dartmouth_flood_observatory.csv  datalakes_eawag.json  dc_311_service_requests.json  deezer_chart_snapshots.json  defillama_eth_tvl.json  digitalocean_status_incidents.json  discogs_marketplace_sales.json  eia_nyis_hourly_demand.json  elia_solar_15min.json  eskom_loadshedding.csv  (+110 more)
tests/: conftest.py  test_anchor.py  test_baselines.py  test_coverage.py  test_daily_feeds.py  test_determinism.py  test_domains.py  test_dsr_eval_metrics.py  test_dsr_eval_runner.py  test_dsr_eval_systems.py  test_dsr_metrics.py  test_evaluate.py  test_feeds.py  test_forge.py  test_forge_llm.py  test_forge_robust.py  test_independent_eval.py  test_leakage_audit.py  test_live_feeds.py  test_metrics_robust.py  test_pool_sampler.py  test_reward_hacking.py  test_sandbox.py  test_scraped_source.py  test_source_discovery.py  test_source_quality.py  test_static_analysis.py  test_tsfm_adapters.py  test_validity.py
tests/fixtures/sources_data/aemo_nem_5min/: 2026-07-01.parquet
tests/fixtures/sources_data/bcb_focus_market_expectations/: 2026-07-01.parquet
tests/fixtures/sources_data/binance_btcusdt_1m/: 2026-07-01.parquet
tests/fixtures/sources_data/bpa_balancing_load_wind/: 2026-07-01.parquet
tests/fixtures/sources_data/cdc_nwss_wastewater/: 2026-07-01.parquet
tests/fixtures/sources_data/defillama_chain_tvl_daily/: 2026-07-01.parquet
tests/fixtures/sources_data/eia_nyis_hourly_demand/: 2026-07-01.parquet
tests/fixtures/sources_data/mauna_loa_co2_daily/: 2026-07-01.parquet
tests/fixtures/sources_data/ndbc_buoy_realtime/: 2026-07-01.parquet
tests/fixtures/sources_data/open_meteo_climate_daily/: 2026-07-01.parquet
tests/fixtures/sources_data/open_meteo_uv_index/: 2026-07-01.parquet
tests/fixtures/sources_data/swpc_solar_wind_plasma/: 2026-07-01.parquet
tests/fixtures/sources_data/swpc_solar_xray_flux/: 2026-07-01.parquet
tests/fixtures/sources_data/treasury_daily_debt_to_penny/: 2026-07-01.parquet
tests/fixtures/sources_data/uk_neso_carbon_historic_30min/: 2026-07-01.parquet
tests/fixtures/sources_data/who_gho_life_expectancy_by_country/: 2026-07-01.parquet
