[project]
name = "tsbench-forge"
version = "0.1.0"
description = "A continuous, hard-to-game benchmark for time-series foundation models, driven by a self-improving forge loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["numpy>=1.25"]

[project.optional-dependencies]
# The classical `strong` anchor can optionally use statsforecast; the numpy
# demo and tests never need it.
strong = ["statsforecast>=1.7"]
test = ["pytest>=7.0"]
# Real TSFMs to put under test (loaded via tsfm_adapters.load_tsfm). Imported
# lazily, so the numpy core, the demo, and the tests never need them.
chronos = ["torch>=2.0", "chronos-forecasting>=1.4"]
timesfm = ["timesfm>=1.2"]
# Dynamical-systems (DSR) eval (dsr_eval/): scipy enables solve_ivp/RK45 integration;
# without it the eval falls back to the numpy RK4 in domains.py. dysts adds Gilpin's
# chaotic-systems zoo as an optional backend. Both imported lazily.
dsr = ["scipy>=1.11"]
dysts = ["dysts>=0.5"]
# Run the example walkthrough notebook (example.ipynb).
notebook = ["matplotlib>=3.7", "jupyter>=1.0"]

[tool.pytest.ini_options]
# Flat module layout: put the repo root on sys.path so tests can `import config`.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# The walkthrough notebooks use notebook-idiomatic style (semicolons, top-level
# plotting); lint the library, not the walkthroughs or their builders.
extend-exclude = ["*.ipynb", "_build_notebook.py", "experiments/build_*_notebook.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Modules are imported by their bare names (flat layout); no first-party package.
