[project]
name = "tsbench-forge"
version = "0.1.0"
description = "A hard-to-game benchmark for time-series foundation models, built on fresh real-world data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["numpy>=1.25"]

[project.optional-dependencies]
# The classical `strong` anchor can optionally use statsforecast; the numpy
# demo and tests never need it.
strong = ["statsforecast>=1.7"]
test = ["pytest>=7.0"]
# Real TSFMs to put under test (loaded via tsfm_adapters.load_tsfm). Imported
# lazily, so the numpy core, the demo, and the tests never need them.
chronos = ["torch>=2.0", "chronos-forecasting>=1.4"]
chronos2 = ["torch>=2.0", "chronos-forecasting>=2.0"]
timesfm = ["timesfm>=1.2"]
# TimesFM-2.5 classes ship from GitHub master (PyPI 2.0.x lacks them, as of 2026-07):
#   pip install "git+https://github.com/google-research/timesfm.git"
timesfm25 = ["torch>=2.0"]
toto2 = ["torch>=2.0", "toto-models>=1.0"]            # import package is `toto2`
tirex = ["torch>=2.0", "tirex-ts>=1.4"]               # import package is `tirex`; [cuda] for sLSTM kernels
moirai2 = ["torch>=2.0", "uni2ts>=1.2"]
flowstate = ["torch>=2.0", "granite-tsfm>=1.0"]       # provides tsfm_public.FlowStateForPrediction
tabpfn-ts = ["torch>=2.0", "tabpfn-time-series>=1.2", "tabpfn>=8.0"]
# Sundial pins transformers==4.40.1 — INSTALL IN A DEDICATED ENV; it does not
# coexist with the newer-transformers models above.
sundial = ["torch>=2.0", "transformers==4.40.1"]
# Statistical model comparison (model_comparison.py): scipy for wilcoxon / ttest_rel / BH-FDR.
stats = ["scipy>=1.11"]
# Drive the TSFM-vs-TSFM comparison on a Lium GPU (scripts/run_tsfm_comparison_lium.py).
lium = ["lium"]
# Dynamical-systems (DSR) eval (dsr_eval/): scipy enables solve_ivp/RK45 integration;
# without it the eval falls back to the numpy RK4 in dsr_eval/systems.py. dysts adds
# Gilpin's chaotic-systems zoo as an optional backend. Both imported lazily.
dsr = ["scipy>=1.11"]
dysts = ["dysts>=0.5"]
# Run the example walkthrough notebook (example.ipynb).
notebook = ["matplotlib>=3.7", "jupyter>=1.0"]

[tool.pytest.ini_options]
# src layout: put src/ on sys.path so tests can `import config`, `import dsr_eval`.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# The walkthrough notebooks use notebook-idiomatic style (semicolons, top-level
# plotting); lint the library, not the walkthroughs or their builders.
extend-exclude = ["*.ipynb", "src/_build_notebook.py", "experiments/build_*_notebook.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Modules are imported by their bare names (flat layout); no first-party package.
